更新首页轮播,分类,猜你喜欢

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences:
   fluttertoast:
   flutter_screenutil:
+  flutter_swiper:
 
 dev_dependencies:
   flutter_test:
